# cell-segmentation

./: .gitignore  README.md  predict.py  pyproject.toml  requirements-kaggle.txt  requirements.txt  train.py
configs/: train.yaml
notebooks/: train_kaggle.ipynb
src/cellseg_challenge/: __init__.py  augmentations.py  data.py  losses.py  model.py  runner.py  utils.py
tests/: test_rle.py
